--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -90,3 +90,11 @@ jobs:
         run: |
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+          
+      - name: Delete old package versions
+        if: ${{ github.event_name != 'pull_request' }}
+        uses: actions/delete-package-versions@v3
+        with: 
+          package-name: ${{ env.IMAGE_NAME }}
+          min-versions-to-keep: 10
+          ignore-versions: '^([0-9]+)\.([0-9]+)'
